# gemini-3-seoul-hackaton-202602

./: .env.example  .gitignore  GEMINI.md  README.md  pyproject.toml  requirements.txt  seed_data_johnnie_walker.json  seed_data_kbeauty_brands.json  seed_data_soju.json  vercel.json
.next/: trace  trace-build
api/: index.py
chroma_data/: chroma.sqlite3
data/: alcohol_models.json  seed_model_vectors.json  tiktok_posts_kr_alcohol_only.csv  vectorized_clickhouse_samples.json  vectorized_instagram_creators_sample100.json  vectorized_instagram_kr_creators_sample100.json
data/schemas/: creator_feature_vector.schema.json
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/public/: creator-videos
scripts/: batch_vectorize_creators.py  demo_flow.py  generate_model_images.py  generate_timeline_images.py  generate_timeline_videos.py  hallucination_catch_demo.py  seed_brands.py  vectorize_clickhouse_creators.py
scripts/outreach/: brand.py  creators.py  demo.py  generate_carousel.py  generate_creator_content.py  generate_guidelines.py  generate_posts.py  generate_scripts.py  generate_video.py  generate_voice.py  make_calls.py  product_reference.py  product_swap.py  text_overlay.py
soju_director/: agent.py
src/: config.py
src/agents/: __init__.py  agent.py  root_tools.py
src/api/: server.py
src/data/: seed_loader.py
src/llm/: gemini_client.py
src/media/: veo_client.py  (+1 more)
tests/: test_agents_integration.py  test_brand_guard.py  test_memory_system.py  test_seed_loader.py  test_strict_creator_fit.py  test_temporal_decay.py
(+102 files in other folders)
